--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -2,7 +2,7 @@ html, body {
   background: #2980B9;
   background: -webkit-linear-gradient(to right, #FFFFFF, #6DD5FA, #2980B9);
   background: linear-gradient(to right, #FFFFFF, #6DD5FA, #2980B9);
-  min-width: 400px;
+
 }
 .container{
   display:flex;
@@ -30,4 +30,11 @@ html, body {
   box-shadow: 0px 0px 10px 4px rgba(119, 119, 119, 0.75);
   -moz-box-shadow: 0px 0px 10px 4px rgba(119, 119, 119, 0.75);
   -webkit-box-shadow: 0px 0px 10px 4px rgba(119, 119, 119, 0.75);
+}
+
+@media screen and (max-width: 456px){
+  .container {
+    width: 90%;
+    margin: auto;
+  }
 }
